# a2a

./: main.py  pyproject.toml
airbnb_agent/: agent.py
battery_summary_agent/: README.md  __main__.py  agent.py  agent_executor.py  pyproject.toml
battery_supply_agent/: __main__.py  agent.py  agent_executor.py  pyproject.toml
battery_supply_agent/battery_supply_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
battery_trade_agent/: README.md  __main__.py  agent.py  agent_executor.py
battery_transport_agent/: README.md  __main__.py  agent.py  agent_executor.py  pyproject.toml
benteler_frame_supply_agent/: __main__.py  agent.py  agent_executor.py  pyproject.toml
catl_battery_supply_agent/: README.md  __main__.py  agent.py  agent_executor.py  pyproject.toml
continental_tire_supply_agent/: README.md  __init__.py  __main__.py  agent.py  agent_executor.py  pyproject.toml
demo/ui/: main.py
demo/ui/components/: conversation.py
demo/ui/service/server/: adk_host_manager.py
factoryagent/: __main__.py  agent.py  agent_executor.py  nohup.out  pyproject.toml
frame_summary_agent/: __main__.py  agent.py  agent_executor.py
frame_supply_agent/: README.md  __main__.py  agent.py  agent_executor.py
frame_trade_agent/: __main__.py  agent.py  agent_executor.py  pyproject.toml
frame_transport_agent/: __main__.py  agent.py  agent_executor.py  pyproject.toml
hirschvogel_frame_supply_agent/: __main__.py  agent.py  agent_executor.py  nohup.out  pyproject.toml
lg_battery_supply_agent/: __main__.py  agent.py  agent_executor.py  pyproject.toml
michelin_tire_supply_agent/: __main__.py  agent.py  agent_executor.py  pyproject.toml
plan_agent/: README.md  __main__.py  agent.py  agent_executor.py  nohup.out  pyproject.toml
pulinsidun_tire_supply_agent/: __init__.py  __main__.py  agent.py  agent_executor.py
samples/python/: pyproject.toml
samples/python/agents/adk_expense_reimbursement/: agent.py  agent_executor.py
samples/python/agents/analytics/: README.md  agent.py  agent_executor.py  pyproject.toml
samples/python/agents/azureaifoundry_sdk/currencyagentdemo/mcp_server/: function_app.py
samples/python/hosts/multiagent/: host_agent.py
search_agent/: README.md  __main__.py  agent.py  pyproject.toml  test_flow.py
tire_summary_agent/: README.md  __main__.py  agent.py  agent_executor.py  nohup.out  pyproject.toml
tire_supply_agent/: __main__.py  agent.py  agent_executor.py
tire_trade_agent/: .env  README.md  __main__.py  agent.py  agent_executor.py  pyproject.toml
tire_transport_agent/: README.md  __main__.py  agent.py  agent_executor.py
